# ai_gia_auditors

./: pyproject.toml
ai_gia_audit_team/: README.md  pyproject.toml
ai_gia_audit_team/config/: agents.yaml  tasks.yaml
ai_gia_audit_team/src/ai_gia_audit_team/: crew.old  crew.py  main.old  main.py
ai_gia_audit_team/src/ai_gia_audit_team/config/: agents.yaml  tasks.yaml
ai_gia_audit_team/src/ai_gia_audit_team/db/: chroma.sqlite3
db/: chroma.sqlite3
