[project]
name = "ai_gia_auditors"
version = "0.1.0"
description = "ai-gia-auditors using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
ai_gia_auditors = "ai_gia_auditors.main:run"
run_crew = "ai_gia_auditors.main:run"
train = "ai_gia_auditors.main:train"
replay = "ai_gia_auditors.main:replay"
test = "ai_gia_auditors.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
