[project]
name = "ai_gia_audit_team"
version = "0.1.0"
description = "ai-gia-audit-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
ai_gia_audit_team = "ai_gia_audit_team.main:run"
run_crew = "ai_gia_audit_team.main:run"
train = "ai_gia_audit_team.main:train"
replay = "ai_gia_audit_team.main:replay"
test = "ai_gia_audit_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
